# github-issue-notify-discord

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
